feat 🆕: converted  Keras model to TensorFlow Lite format for running mobile devices

--- a/ModelTraining.ipynb
+++ b/ModelTraining.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kaan/.local/lib/python3.12/site-packages/matplotlib/projections/__init__.py:63: UserWarning: Unable to import Axes3D. This may be due to multiple versions of Matplotlib being installed (e.g. as a system package and as a pip package). As a result, the 3D projection is not available.\n",
+      "  warnings.warn(\"Unable to import Axes3D. This may be due to multiple versions of \"\n"
+     ]
+    }
+   ],
    "source": [
     "import plotly.express as px\n",
     "import os\n",
@@ -27,7 +36,7 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.applications import MobileNetV2\n",
     "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D\n",
-    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.models import Model , load_model\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import warnings\n",
@@ -360,6 +369,30 @@
     ")\n",
     "\n",
     "model.save(\"WasteClassification_model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5|Convert Keras Model To TFLite\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras_model = tf.keras.models.load_model(\"WasteClassification_model.h5\")\n",
+    "\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model(keras_model)\n",
+    "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
+    "tflite_model = converter.convert()\n",
+    "\n",
+    "with open(\"WasteClassification_model.tflite\", \"wb\") as f:\n",
+    "    f.write(tflite_model)\n",
+    "\n"
    ]
   }
  ],
